refactor: make file reads work with jar file